--- a/BinMaps.JS/styles/styles.css
+++ b/BinMaps.JS/styles/styles.css
@@ -1570,7 +1570,7 @@ canvas {
 .floating-report-btn {
     position: fixed;
     bottom: 30px;
-    right: 30px;
+    /* right: 30px; */
     z-index: 999;
     display: flex;
     align-items: center;
@@ -1941,6 +1941,25 @@ footer {
     left: 50%;
     margin-left: -10px;
     margin-top: -10px;
+}
+.leaflet-control{
+    z-index: 0 !important;
+}
+
+/* Ensure all Leaflet controls stay below navbar */
+.leaflet-top,
+.leaflet-bottom {
+    z-index: 0 !important;
+}
+
+.leaflet-control-zoom,
+.leaflet-control-attribution,
+.leaflet-routing-container {
+    z-index: 0 !important;
+}
+
+#navbar{
+    z-index: 1000 !important;
 }
 
 @keyframes spin {
